финальные правки по проекту: раскомментены некотрые тесты, проставлена маркировка

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,4 @@
 markers =
     login_guest: marks login pages tests
     login_user: marks tests for login users only, not guests
+    need_review: marks tests for review
